--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -4,34 +4,45 @@
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
     margin: auto; /* 페이지 중앙 정렬 */
 }
+
+.form {
+    display: flex;
+}
+.form input {
+    flex: 1; /* 버튼을 뺀 빈 공간을 모두 채워줍니다 */
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #c5f6fa;
+}
   
 .title {
-padding: 2rem;
-font-size: 2.5rem;
-text-align: center;
-font-weight: 100;
-background: #22b8cf;;
-color: white;
+    padding: 2rem;
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 100;
+    background: #22b8cf;;
+    color: white;
 }
 
 .form-wrapper {
-padding: 1rem;
-border-bottom: 1px solid #22b8cf;
+    padding: 1rem;
+    border-bottom: 1px solid #22b8cf;
 }
 
 .todos-wrapper {
-min-height: 5rem;
+    min-height: 5rem;
 }
 
 .create-button {
-padding-top: 0.5rem;
-padding-bottom: 0.5rem;
-padding-left: 1rem;
-padding-right: 1rem;
-margin-left: 1rem;
-background: #22b8cf;
-border-radius: 3px;
-color: white;
-font-weight: 600;
-cursor: pointer;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: 1rem;
+    background: #22b8cf;
+    border-radius: 3px;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
 }
