--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -9,10 +9,11 @@
     display: flex;
 }
 .form input {
-    flex: 1; /* 버튼을 뺀 빈 공간을 모두 채워줍니다 */
+    flex: 1;
     font-size: 1rem;
     outline: none;
     border: none;
+    width: 10%;
     border-bottom: 1px solid #c5f6fa;
 }
   
